# smc-partie-team

./: README.md
Voting/: Cargo.toml
Voting/res/: voting_near.wasm
Voting/src/: external.rs  lib.rs
faucet/: Cargo.toml
faucet/res/: faucet_ft_near.wasm
faucet/src/: external.rs  lib.rs
ft-PAT/: Cargo.toml
ft-PAT/res/: ft_near.wasm
ft-PAT/src/: lib.rs
staking/: Cargo.toml
staking/res/: staking_near.wasm
staking/src/: external.rs  legacy_storage.rs  lib.rs  ve_pat.rs
